rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__d.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 27,
        "id": {
          "commentStart": 0,
          "end": 5,
          "moduleId": 0,
          "name": "myVar",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "commentStart": 8,
              "end": 13,
              "left": {
                "commentStart": 8,
                "end": 9,
                "moduleId": 0,
                "raw": "5",
                "start": 8,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 5.0,
                  "suffix": "None"
                }
              },
              "moduleId": 0,
              "operator": "+",
              "right": {
                "commentStart": 12,
                "end": 13,
                "moduleId": 0,
                "raw": "6",
                "start": 12,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 6.0,
                  "suffix": "None"
                }
              },
              "start": 8,
              "type": "BinaryExpression",
              "type": "BinaryExpression"
            },
            {
              "arguments": [],
              "callee": {
                "abs_path": false,
                "commentStart": 17,
                "end": 23,
                "moduleId": 0,
                "name": {
                  "commentStart": 17,
                  "end": 23,
                  "moduleId": 0,
                  "name": "myFunc",
                  "start": 17,
                  "type": "Identifier"
                },
                "path": [],
                "start": 17,
                "type": "Name"
              },
              "commentStart": 17,
              "end": 27,
              "moduleId": 0,
              "start": 17,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": {
                "commentStart": 24,
                "end": 26,
                "moduleId": 0,
                "raw": "45",
                "start": 24,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 45.0,
                  "suffix": "None"
                }
              }
            }
          ],
          "commentStart": 8,
          "end": 27,
          "moduleId": 0,
          "start": 8,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 27,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 27,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
